--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+  "name": "php/test",
+  "description": "test case for php",
+  "license": "proprietary",
   "require": {
     "slim/slim": "^4.0",
     "slim/psr7": "^1.6",
