--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,12 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
       with:
-          php-version: 7.4
+        php-version: 7.4
+        tools: composer
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
-
+      
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v3
