--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,6 +38,9 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Check code style
+      run: vendor/bin/php-cs-fixer fix --verbose --dry-run --diff --allow-risky=yes
+
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
